hide root element overflow to prevent scroll

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,4 +17,5 @@ body {
   align-items: center;
   background-color: $blue;
   height: 100%;
+  overflow-y: hidden;
 }
